--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #35869c;
+$secondary : #f1f9fa;
+$accent    : #162b36;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
@@ -23,3 +23,11 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+
+$h1:        (size: 2rem,     line-height: 2rem,     letter-spacing: -.01562em, weight: 300) !default;
+$h2:        (size: 1.75rem,  line-height: 1.75rem,  letter-spacing: -.00833em, weight: 300) !default;
+$h3:        (size: 1rem,     line-height: 1rem, letter-spacing: normal,    weight: 400) !default;
+$h4:        (size: 0.875rem, line-height: 0.875rem,   letter-spacing: .00735em,  weight: 400) !default;
+$h5:        (size: 0.5rem,   line-height: 0.5rem,     letter-spacing: normal,    weight: 400) !default;
+$h6:        (size: 0.25rem,  line-height: 0.25rem,     letter-spacing: .0125em,   weight: 500) !default;
